Added script to choose whether to start with java module system. Default to classpath.